# device-software-for-aws-connected-mobility-solution

./: .gitignore  .gitmodules  NOTICE  README.md
components/backoffAlgorithm/: CMakeLists.txt
components/coreMQTT-Agent/: CMakeLists.txt  Kconfig
components/coreMQTT-Agent/coreMQTT-Agent-port/include/: core_mqtt_agent_tasks.h  freertos_agent_message.h  subscription_manager.h
components/coreMQTT-Agent/coreMQTT-Agent-port/source/: core_mqtt_agent_daemon.c  core_mqtt_agent_tasks.c  freertos_command_pool.c  subscription_manager.c
components/coreMQTT-Agent/coreMQTT-port/include/: core_mqtt_config.h
components/coreMQTT-Agent/coreMQTT-port/logging/: logging_levels.h  logging_stack.h
components/coreMQTT-Agent/coreMQTT-port/network_transport/: tls_freertos.c  tls_freertos.h  tls_freertos_transport.h
components/coreMQTT-Agent/coreMQTT-port/network_transport/transport_esp32_wifi/: transport_esp32_wifi.c
components/coreMQTT-Agent/coreMQTT-port/platform/: platform.c
components/freertos_plus_io/: CMakeLists.txt
components/freertos_plus_io/include/: FreeRTOS_DriverInterface.h  FreeRTOS_IO.h  buzz_device.h  obd_device.h  secure_device.h
components/freertos_plus_io/src/: FreeRTOS_DriverInterface.c  buzz_device.c  obd_device.c  secure_device.c
drivers/buzzer/: CMakeLists.txt
drivers/buzzer/include/: buzz_library.h
drivers/buzzer/source/: buzz_library.c
drivers/gps/: CMakeLists.txt
drivers/gps/include/: gps_library.h
drivers/gps/source/: gps_library.c
drivers/obd/: CMakeLists.txt
drivers/obd/include/: obd_data.h  obd_library.h  obd_pid.h
drivers/obd/source/: obd_library.c
project/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
project/appOBD/include/: obd_config.h  obd_context.h
project/appOBD/source/: obd_main.c  simulated_route.c
project/credentials/: note.txt
project/main/: CMakeLists.txt  Kconfig.projbuild  main.c
project/main/include/: cms_log.h
project/sdCard/: sdCard.c
